# egui_hooks

./: .gitignore  Cargo.toml  README.md
examples/: custom_hooks.rs  use_cleanup.rs  use_effect.rs  use_memo.rs  use_persisted_state.rs  use_persistent_state.rs  use_state.rs
src/: cleanup.rs  deps.rs  dispatcher.rs  ephemeral_map.rs  ext.rs  hook.rs  lib.rs  two_frame_map.rs
src/hook/: cleanup.rs  effect.rs  ephemeral_kv.rs  kv.rs  memo.rs  persisted_state.rs  persistent_state.rs  state.rs  two_frame_kv.rs
src/hook/state/: macros.rs  var.rs
