[package]
name = "egui_hooks"
version = "0.1.0"
edition = "2021"
description = "React Hooks like API for egui"
categories = ["gui"]
keywords = ["egui", "hook", "gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryo33/egui_hooks"

[features]
default = []
persistence = [
  "egui/persistence",
  "arc-swap/serde",
  "serde",
  "eframe/persistence",
]

[dependencies]
egui = "0.24"
arc-swap = "1.6"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
eframe = { version = "0.24" }

[[example]]
name = "use_persisted_state"
required-features = ["persistence"]
