[package]
name = "egui_hooks"
version = "0.5.0"
edition = "2021"
description = "React Hooks like API for egui"
categories = ["gui"]
keywords = ["egui", "hook", "gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryo33/egui_hooks"

[features]
default = []
persistence = [
  "egui/persistence",
  "arc-swap/serde",
  "serde",
  "eframe/persistence",
  "parking_lot/serde",
]
serde = ["egui/serde", "arc-swap/serde", "dep:serde", "parking_lot/serde"]

[dependencies]
egui = "0.29"
arc-swap = "1.7"
serde = { version = "1", features = ["derive"], optional = true }
parking_lot = { version = "0.12", features = ["arc_lock"] }

[dev-dependencies]
eframe = { version = "0.29" }

[[example]]
name = "use_persisted_state"
required-features = ["persistence"]
